head, google analytics, favicon

--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,9 @@ defaults:
   values:
     layout: category
 email: contact@independance-immobiliere.net
+meta_description: Fondée en 1974, Indépendance Immobilière se caracterise par son expertise et son dynamisme
+  en sa qualite de leader au Senegal dans le secteur de l'immobilier. Nous offrons tout type de services 
+  immobilier notamment la location, la vente, la gestion de patrimoine et la copropriété
 description: INDEPENDANCE IMMOBILIERE est ouverte depuis 1974.L''agence est 
   sous la direction de Mme Fabienne CARRERE, diplômée en Droit des Affaires,
   Premier Clerc de Notaire, diplômée de l''Ecole Villaret de Joyeuse à Paris.
