--- a/_config.yml
+++ b/_config.yml
@@ -78,5 +78,5 @@ adresse: Av. Fadiga, Immeuble Lahad Mbacké Dakar
 bp: BP 2975
 text: Adressez vous à un professionnel de l'immobilier afin d’être pleinement satisfait
   des prestations offertes.
-logo: "/uploads/logoo.png"
+logo: "/uploads/IIG_logo.png"
 parallax: "/uploads/inde4.jpg"
